# AgenticAI_learning

./: conversation_history.txt  main.py  pyproject.toml
app/: ReAct.py  agent_bot.py  mcp.py  memory_bot.py
data_files/: conversation_history.txt
data_files/docling_output/: attention-with-image-refs.md  attention-with-image-refs_noc.md
notebook/: cross_encoder.ipynb  dataIngestion.ipynb  docling.ipynb  embedding.ipynb  langraph.ipynb  langraph_graph.ipynb  mcp.ipynb  mcp.py  pyndantic.ipynb  semantic_chunking.ipynb  textsplitter.ipynb
