[project]
name = "agentic-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.1",
    "black>=25.12.0",
    "bs4>=0.0.2",
    "docling>=2.66.0",
    "fastembed>=0.7.4",
    "ipywidgets>=8.1.8",
    "isort>=7.0.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.4",
    "langchain-text-splitters>=1.1.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "wikipedia>=1.4.0",
]
